8170979: Update for Jigsaw etc. the openFX functional tests
Reviewed-by: kcr, avstepan